Update About component styles: adjust padding for better spacing and remove fixed width to enhance layout flexibility.

--- a/src/pages/about/About.scss
+++ b/src/pages/about/About.scss
@@ -390,8 +390,8 @@
   color: white;
   margin-bottom: -5rem;
   background: #344e5d;
-  padding: 1rem;
-  width: 15%;
+  padding: 1rem 4rem;
+  /* width: 15%; */
   text-align: center;
   border-radius: 50px;
   border: solid 2px;
